--- a/sparrow-spring-boot/pom.xml
+++ b/sparrow-spring-boot/pom.xml
@@ -22,6 +22,8 @@
         <maven.compile.encoding>UTF-8</maven.compile.encoding>
         <java.version>1.8</java.version>
         <druid.version>1.1.10</druid.version>
+        <mybatis-spring.version>1.2.2</mybatis-spring.version>
+        <mybatis.version>3.2.8</mybatis.version>
     </properties>
     <dependencies>
         <dependency>
