--- a/sparrow-spring-cloud-alibaba-nacos-config/src/main/resources/bootstrap.properties
+++ b/sparrow-spring-cloud-alibaba-nacos-config/src/main/resources/bootstrap.properties
@@ -1,24 +1,20 @@
 spring.application.name=sparrow
 
-spring.cloud.nacos.discovery.namespace=fed50c06-8519-4e54-adb0-a0c2c7a71afa
+#spring.cloud.nacos.discovery.namespace=fed50c06-8519-4e54-adb0-a0c2c7a71afa
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 
-##注册中心地址
+#注册中心地址
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #namespace 必填
-spring.cloud.nacos.config.namespace=fed50c06-8519-4e54-adb0-a0c2c7a71afa
+#spring.cloud.nacos.config.namespace=fed50c06-8519-4e54-adb0-a0c2c7a71afa
 spring.cloud.nacos.config.group=sparrow-zoo
 #添加后无法获取 不需要properties 扩展名
 #spring.cloud.nacos.config.name=sparrow.properties
 spring.cloud.nacos.config.name=sparrow-blog
 spring.cloud.nacos.config.file-extension=properties
-spring.cloud.nacos.config.ext-config[0].data-id=sparrow_blog.properties
 # 默认false
-spring.cloud.nacos.config.ext-config[0].refresh=true
-spring.cloud.nacos.config.refreshable-dataids=sparrow_blog.properties
 #https://developer.aliyun.com/ask/317395
-spring.cloud.nacos.config.shared-dataids=sparrow_blog.properties
 
 
 
