--- a/sparrow-spring-cloud-alibaba-nacos-dubbo/pom.xml
+++ b/sparrow-spring-cloud-alibaba-nacos-dubbo/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- REST support dependencies -->
         <dependency>
             <groupId>io.netty</groupId>
@@ -93,6 +97,10 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
 
