--- a/sparrow-spring-boot/src/main/resources/application.properties
+++ b/sparrow-spring-boot/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.druid.max-active=16
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-wait=60000
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.config-location=classpath:mybatis-config.xml
+
