--- a/sparrow-servlet-0.1/pom.xml
+++ b/sparrow-servlet-0.1/pom.xml
@@ -2,6 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.sparrowzoo</groupId>
+        <artifactId>sparrow-bom</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+        <relativePath/>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sparrow.java.lession</groupId>
     <artifactId>sparrow-servlet-0.1</artifactId>
@@ -19,6 +25,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
@@ -28,6 +39,10 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet_api_version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -56,7 +71,7 @@
                 <version>${tomcat.plugin.version}</version>
                 <configuration>
                     <path>/</path>
-                    <port>7777</port>
+                    <port>8888</port>
                 </configuration>
                 <dependencies>
                     <dependency>
