--- a/sparrow-spring-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/sparrow-spring-cloud-gateway/src/main/resources/bootstrap.yml
@@ -8,6 +8,6 @@ spring:
     allow-bean-definition-overriding: true
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: nacos.p.yufeiworld.com
       username: nacos
       password: nacos
