--- a/sparrow-spring-cloud-alibaba-nacos-config/src/main/resources/bootstrap.properties
+++ b/sparrow-spring-cloud-alibaba-nacos-config/src/main/resources/bootstrap.properties
@@ -1,9 +1,10 @@
 spring.application.name=sparrow
-
 #spring.cloud.nacos.discovery.namespace=fed50c06-8519-4e54-adb0-a0c2c7a71afa
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-
-
+#关于共享配置与扩展配置的区别
+# https://www.jianshu.com/p/8715072d3f4c
+#https://blog.csdn.net/m0_62946761/article/details/128907603
+#NacosConfigProperties 对应的配置类
 #注册中心地址
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #namespace 必填
@@ -11,8 +12,10 @@ spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.group=sparrow-zoo
 #添加后无法获取 不需要properties 扩展名
 #spring.cloud.nacos.config.name=sparrow.properties
+#spring.application.name 为配置文件的默认名
 spring.cloud.nacos.config.name=sparrow-blog
 spring.cloud.nacos.config.file-extension=properties
+spring
 # 默认false
 #https://developer.aliyun.com/ask/317395
 
