--- a/sparrow-spring-boot-shiro/pom.xml
+++ b/sparrow-spring-boot-shiro/pom.xml
@@ -34,9 +34,9 @@
             <version>1.2.3</version>
         </dependency>
         <dependency>
-            <groupId>com.sparrow</groupId>
+            <groupId>com.sparrowzoo</groupId>
             <artifactId>sparrow-protocol</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.4-RELEASE</version>
         </dependency>
         <!-- thymeleaf -->
         <dependency>
