--- a/sparrow-spring-boot/src/main/resources/application.properties
+++ b/sparrow-spring-boot/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 server.port=8000
-spring.datasource.url=jdbc:mysql://127.0.0.1/sparrow?useSSL=false&autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=11111111
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.initial-size=8
-spring.datasource.druid.max-active=16
-spring.datasource.druid.min-idle=1
-spring.datasource.druid.max-wait=60000
+#spring.datasource.url=jdbc:mysql://127.0.0.1/sparrow?useSSL=false&autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=11111111
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.druid.initial-size=8
+#spring.datasource.druid.max-active=16
+#spring.datasource.druid.min-idle=1
+#spring.datasource.druid.max-wait=60000
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
+spring.mvc.view.prefix=/WEB-INF/template/
+sparrow.swagger.enable=false
+# WebMvcConfigurationSupport disable spring boot default static resource access
+#https://t.zsxq.com/0eMXTn5bC
+# static file access prefix
+#spring.mvc.static-path-pattern=/**
+# static resource find location
+#spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
 
