--- a/sparrow-spring-boot/pom.xml
+++ b/sparrow-spring-boot/pom.xml
@@ -51,17 +51,17 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>${druid.version}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.alibaba</groupId>-->
+        <!--            <artifactId>druid</artifactId>-->
+        <!--            <version>${druid.version}</version>-->
+        <!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.4</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.mybatis.spring.boot</groupId>-->
+        <!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+        <!--            <version>2.1.4</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.sparrowzoo</groupId>
             <artifactId>sparrow-protocol-dao</artifactId>
@@ -72,12 +72,17 @@
             <version>1.0.0-SNAPSHOT</version>
             <!--            <scope>provided</scope>-->
         </dependency>
-
         <dependency>
-                    <groupId>com.sparrow</groupId>
-                    <artifactId>sparrow-starter</artifactId>
-                    <version>1.0-SNAPSHOT</version>
-                </dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.13</version>
+        </dependency>
+
+        <!--        <dependency>-->
+        <!--                    <groupId>com.sparrow</groupId>-->
+        <!--                    <artifactId>sparrow-starter</artifactId>-->
+        <!--                    <version>1.0-SNAPSHOT</version>-->
+        <!--                </dependency>-->
     </dependencies>
     <build>
         <plugins>
